<resources>
    <string name="app_name">E-Rx</string>
    <string name="lipsm">Lorem lpsum is simply dummy text of the printing and type setting industry</string>
    <string name="lip">setting industry.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone Number</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name <font color="#FF0000"> *</font></string>
    <string name="mobile_number">Mobile Number <font color="#FF0000"> *</font></string>
    <string name="email_id">Email Id</string>
    <string name="emirates_id_number">Emirates Id Number <font color="#FF0000"> *</font></string>
    <string name="insurance_card_picture_front_side">Insurance Card Picture (Front Side)</string>
    <string name="dob">DOB <font color="#FF0000"> *</font></string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_location">Select Location <font color="#FF0000"> *</font></string>
    <string name="create_password">Create Password <font color="#FF0000"> *</font></string>
    <string name="additional_mobile_number">Additional Mobile Number</string>
    <string name="confirm_passsword">Confirm Passsword <font color="#FF0000"> *</font></string>
    <string name="enter_your_address">Enter your address</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="otp">OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="notifications">Notifications</string>
    <string name="my_prescription">My Prescriptions</string>
    <string name="home">Home</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="setting">Settings</string>
    <string name="accept_amp_conditions">Accept Terms &amp; Conditions</string>
    <string name="clear_all">Clear All</string>
    <string name="add_card">Add Card</string>
    <string name="prescription_id">Prescription ID</string>
    <string name="prescription_detail">Prescription Detail</string>
    <string name="booking_id">Booking ID</string>
    <string name="booking_detail">Booking Detail</string>
    <string name="sort">Sort</string>
    <string name="please_fill_the_followings_details">Please fill the followings details</string>
    <string name="name_on_card">Name on Card</string>
    <string name="card_number">Card Number</string>
    <string name="proceed_to_pay">Proceed to pay</string>
    <string name="cvv">CVV</string>
    <string name="card_expiry_date">Card Expiry Date</string>
    <string name="add_new_card">Add New Card</string>
    <string name="chat_with_provider">Chat with Provider</string>
    <string name="chat_with_delivery_boy">Chat with Delivery Boy</string>
    <string name="out_for_delivery">Out for Delivery</string>
    <string name="type_here">Type here ..</string>
    <string name="chat">Chat</string>
    <string name="rate_us_on_google_play_store">Rate Us on Google Play Store</string>
    <string name="rate_our_service">Rate Our Service</string>
    <string name="done">Done</string>
    <string name="term_of_services">Term of Services</string>
    <string name="support">Support</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="choose_option">Choose Option</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="prescription_uploaded_sucessfully_n_you_will_be_notified_once_a_provider_accepts_your_requests">Prescription Uploaded Successfully! \n You Will be notified once a provider accepts your requests</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="language_selection">Language Selection</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="service_name">Service Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="payment_method">Payment Method</string>
    <string name="service_provider_details">Service Provider Details</string>
    <string name="invoice">Invoice</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="addess">Address</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="mobile_number2">Mobile Number</string>
    <string name="do_you_really_want_to_logout">Do you really want to logout </string>
    <string name="allow">Allow</string>
    <string name="don_t_allow">Don\'t Allow</string>
    <string name="alert">Alert</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name_validation">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="search_here">Search Here</string>
    <string name="detect_your_location">Detect your location</string>
    <string name="google_map_api_key">AIzaSyDLRsO_oOSnSc0pzp6MzZ0Hg7cByd7k8qo</string>
    <string name="not_available">Not Available</string>
    <string name="number_validation">0123456789</string>
    <string name="no_internet">No Internet</string>
    <string name="default_notification_channel_id">1001</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="proceed">Proceed</string>
    <string name="needs_to_allow_permission">You need to Allow the Permissions</string>
    <string name="enter_phone_number">Please enter Phone Number</string>
    <string name="enter_valid_phone_number">Please enter valid Phone Number</string>
    <string name="enter_your_password">Please enter your Password</string>
    <string name="the_precriptions_hub">The Precriptions Hub</string>
    <string name="enter_full_name">Please Enter Full Name</string>
    <string name="enter_mobile_number">Please Enter mobile number</string>
    <string name="valid_phone_number">Please enter valid mobile number</string>
    <string name="enter_email_id">Please enter email id</string>
    <string name="enter_valid_email_id">Please enter valid email id</string>
    <string name="enter_emirates_id_number">Please enter Emirates Id Number</string>
    <string name="attach_the_photo_of_emirates_id_number">Please attach the photo of the Emirates ID (front side)</string>
    <string name="attach_the_photo_of_insrance_card">Please attach the photo of Insurance card front side</string>
    <string name="select_your_dob">Please select your Date Of Birth</string>
    <string name="select_gender">Please select Gender</string>
    <string name="add_your_address">Please add you address</string>
    <string name="valid_additional_mobile_number">Please enter valid Additional Mobile Number</string>
    <string name="add_differ_additional_number">Please Add Different Additional Mobile Number , It cannot be same as Mobile Number</string>
    <string name="password_atleast_of_characters">Please enter your password atleast of 8 characters</string>
    <string name="enter_your_confirm_password">Please enter your confirmed password</string>
    <string name="enter_your_confirm_password_characters">Please enter your confirm password atleast of 8 characters</string>
    <string name="mark_as_aggred_to_term">Please accept the Terms and Conditions</string>
    <string name="confirm_password_does_not_match">Passwords should match</string>
    <string name="needs_to_allow_to_use_this_functionality">You need to Allow the Permission to use this functionality</string>
    <string name="terms_conditions">Terms and Conditons</string>
    <string name="or">OR</string>
    <string name="enter_the_otp_recived_on_mbile">Enter the OTP received on email</string>
    <string name="ending_with">\n ends with</string>
    <string name="wait_for_the_otp">Please wait for the otp</string>
    <string name="enter_otp">Please Enter Otp</string>
    <string name="enter_valid_otp">Please enter valid Otp</string>
    <string name="enter_your_confirm_pass_atleast_characters">Please enter your confirm password atleast of 8 characters</string>
    <string name="invalid_code_entered">Invalid code entered...</string>
    <string name="request_another_otp">Request Another OTP</string>
    <string name="how_to_prescription">How to add a prescription</string>
    <string name="choosing_pick_up_delivery">Choose pick up or delivery</string>
    <string name="my_prescriptions">My Prescriptions</string>
    <string name="upload_prescription">3-Upload the prescription.</string>
    <string name="click_on_camera_icon">1-Click on the camera icon.</string>
    <string name="you_will_receive_notification">1-You will receive a notification once a provider accepts your prescription.</string>
    <string name="you_can_check_prescription_status_from_here">-You can check your prescription status from here, accept or refuse a request from the provider.</string>
    <string name="once_you_accept_the_offer_from_provider_any_pay">2-Once you accept the offer from a provider and pay, you can choose to pick up yourself or the delivery option for an additional AED 10.</string>
    <string name="choose_the_picture_from_gallery">2-Choose the picture from gallery or capture by camera.</string>
    <string name="enter_provider_name">Please enter Provider Name</string>
    <string name="my_profile">My Profile</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="press_again_to_exit">Press Again to exit</string>
    <string name="search_provider_name">Search Provider Name</string>
    <string name="my_offers">My Offers</string>
    <string name="getting_address">Getting address…</string>
    <string name="we_do_not_serve_here">Sorry we do not serve here yet…</string>
    <string name="booking_date">Booking Date:</string>
    <string name="delivery_type">\n Delivery Type:</string>
    <string name="address">\nAddress:</string>
    <string name="delivery_boy">Delivery Boy</string>
    <string name="provider">Provider</string>
    <string name="enter_your_message_first">Please enter your message first</string>
    <string name="existing_address">Existing Address</string>
    <string name="delivery_at_new_address">Delivery at New Address</string>
    <string name="choose_address">Choose Address</string>
    <string name="enable_gps">Please enable GPS</string>
    <string name="please_enter_your_registered_mobile_number">Please enter your registered Mobile Number</string>
    <string name="downloaded_successfully">Downloaded Successfully!</string>
    <string name="open_pdf">Open PDF</string>
    <string name="no_application_available">No Application available to view PDF</string>
    <string name="status">\nStatus :</string>
    <string name="type">\nType:</string>
    <string name="on_going">On Going</string>
    <string name="past">Past</string>
    <string name="profile">Profile</string>
    <string name="payment">Payment</string>
    <string name="delivery_date">\nDelivery Date:</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="vat_inc">VAT inc.)</string>
    <string name="mark_as_agreed">Please mark as agreed</string>
    <string name="choose_delivery_type">Choose Delivery Type</string>
    <string name="change_language">Change Language</string>
</resources>