<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.erxprescriptionuser.Activity.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:src="@drawable/login_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/the_precriptions_hub"
        android:textColor="#8BC34A"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />



    <TextView
        android:id="@+id/ccode"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginStart="6dp"
        android:elevation="1dp"
        android:text="+971"
        android:drawableEnd="@drawable/flag_uae"
        android:textColor="@android:color/black"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:drawablePadding="12dp"
        android:visibility="visible"
        app:ccp_textSize="@dimen/normal_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/edPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/edPhoneNumber"
        app:layout_constraintTop_toTopOf="@+id/edPhoneNumber" />

    <EditText
        android:id="@+id/edPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/drawable_selector_edittext"
        android:digits="@string/number_validation"
        android:textAlignment="viewStart"
        android:fontFamily="@font/font"
        android:hint="@string/phone_number"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="10"
        android:paddingStart="105dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:textColor="@color/hint_selector"
        android:textColorHint="@color/hint_selector"
        android:textSize="@dimen/large_text_size"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/drawable_selector_edittext"
        android:fontFamily="@font/font"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="30dp"
        android:paddingEnd="25dp"
        android:singleLine="true"
        android:textColor="@color/hint_selector"
        android:textColorHint="@color/hint_selector"
        android:textSize="@dimen/large_text_size"
        android:textAlignment="viewStart"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/edPhoneNumber"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/edPhoneNumber" />


    <ImageView
        android:id="@+id/ivPassword"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginEnd="12dp"
        android:paddingEnd="12dp"
        android:src="@drawable/eye"
        app:layout_constraintBottom_toBottomOf="@+id/edPassword"
        app:layout_constraintEnd_toEndOf="@+id/edPassword"
        app:layout_constraintTop_toTopOf="@+id/edPassword" />

    <CheckBox
        android:id="@+id/cbRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="32dp"
        android:button="@drawable/selector_checkbox"
        android:text="@string/remember_me"
        android:fontFamily="@font/font"
        android:textStyle="normal"
        android:textSize="@dimen/large_text_size"
        android:paddingStart="11dp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="@+id/edPassword"
        app:layout_constraintTop_toBottomOf="@+id/edPassword" />


    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:fontFamily="@font/font"
        android:text="@string/forget_password"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_size"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/cbRememberMe"
        app:layout_constraintEnd_toEndOf="@+id/edPassword"
        app:layout_constraintTop_toTopOf="@+id/cbRememberMe" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/corner_stroke"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/font"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text_size"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/edPassword"
        app:layout_constraintStart_toStartOf="@+id/edPassword"
        app:layout_constraintTop_toBottomOf="@+id/cbRememberMe" />

    <Button
        android:id="@+id/btnSingup"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/creat_btn_selector"
        android:fontFamily="@font/font"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/large_text_size"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>