<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.OTPVerificationActivity">

        <include
            android:id="@+id/include"
            layout="@layout/layout_main_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/font"
            android:text="@string/please_fill_the_followings_details"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/large_text_size"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />


        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/drawable_selector_edittext"
            android:fontFamily="@font/font"
            android:hint="@string/name_on_card"
            android:paddingStart="30dp"
            android:paddingEnd="10dp"
            android:textColor="@color/hint_selector"
            android:textColorHint="@color/hint_selector"
            android:textSize="@dimen/large_text_size"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />


        <EditText
            android:id="@+id/editText4"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/drawable_selector_edittext"
            android:fontFamily="@font/font"
            android:hint="@string/card_number"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textColor="@color/hint_selector"
            android:textColorHint="@color/hint_selector"
            android:textSize="@dimen/large_text_size"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/drawable_selector_edittext"
            android:fontFamily="@font/font"
            android:hint="@string/card_expiry_date"
            android:paddingStart="30dp"
            android:paddingEnd="10dp"
            android:textColor="@color/hint_selector"
            android:textColorHint="@color/hint_selector"
            android:textSize="@dimen/large_text_size"
            android:textStyle="normal"
            app:layout_constraintEnd_toStartOf="@+id/editText6"
            app:layout_constraintStart_toStartOf="@+id/editText4"
            app:layout_constraintTop_toBottomOf="@+id/editText4" />


        <EditText
            android:id="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:background="@drawable/drawable_selector_edittext"
            android:fontFamily="@font/font"
            android:hint="@string/cvv"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textColor="@color/hint_selector"
            android:textColorHint="@color/hint_selector"
            android:textSize="@dimen/large_text_size"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/editText5"
            app:layout_constraintEnd_toEndOf="@+id/editText4"
            app:layout_constraintTop_toTopOf="@+id/editText5" />

        <Button
            android:id="@+id/btnPay"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:background="@drawable/corner_stroke"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/font"
            android:text="@string/proceed_to_pay"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_size"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editText6"
            app:layout_constraintStart_toStartOf="@+id/editText5"
            app:layout_constraintTop_toBottomOf="@+id/editText5" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>